# smart-contracts

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  sonar-project.properties
case-studies/: wormhole_exploit.md
checklists/: general_security_checklist.md  solana_security_checklist.md
docs/: vulnerability_scanner.md
examples/: demo.rs
src/: lib.rs  main.rs  utils.rs
src/vulnerabilities/: access_control.rs  account_confusion.rs  denial_of_service.rs  flash_loan.rs  front_running.rs  illicit_fee_collection.rs  inadequate_events.rs  logic_errors.rs  mod.rs  oracle_manipulation.rs  overflow.rs  random_manipulation.rs  reentrancy.rs  signature_verification.rs  storage_management.rs  unchecked_inputs.rs
tests/: vulnerabilities_tests.rs
