[package]
name = "rust-smart-contracts-vulns"
version = "0.1.0"
edition = "2024"
description = "A comprehensive guide to Rust smart contract vulnerabilities for auditors"
authors = ["0xm4ze"]
license = "MIT"
readme = "README.md"

[dependencies]
borsh = "0.10.3"
solana-program = "1.16.0"
anchor-lang = "0.28.0"
near-sdk = "5.0.0"
rand = "0.8.5"
thiserror = "1.0.40"
hex = "0.4.3"
regex = "1.8.4"
clap = { version = "4.3.10", features = ["derive"] }
colored = "2.0.4"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.3.0"
proptest = "1.2.0"

[[bin]]
name = "vuln_scanner"
path = "src/bin/vuln_scanner.rs"
